syntax = "proto3";


message GrayScaleRequest{
    string in_img_path=1;
    bool process_all_flag=2;
    repeated string in_img_list=3;
    string out_img_path = 4;
}

message ColorSwitchRequest{
    string in_img_path=1;
    bool process_all_flag=2;
    repeated string in_img_list=3;
    string out_img_path = 4;
    int64 sub_process_num = 5;
}
message ColorConversionRequest{
    string in_img_path=1;
    bool process_all_flag=2;
    repeated string in_img_list=3;
    string out_img_path = 4;
    string sub_process_black = 5;
    string sub_process_white = 6;
    string sub_process_mid = 7;
}
message ExtractSingleChannelRequest{
    string in_img_path=1;
    bool process_all_flag=2;
    repeated string in_img_list=3;
    string out_img_path = 4; 
    int64 sub_process_num = 5;
}

message DisplaySlectedChannelRequest{
    string in_img_path=1;
    bool process_all_flag=2;
    repeated string in_img_list=3;
    string out_img_path = 4; 
    int64 sub_process_num = 5;
}